Solved all 3 tasks

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -60,14 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'the': 1, 'to': 1, 'world': 2, 'ai': 2, 'hello': 2, 'welcome': 1, 'committee': 1}\n"
+      "String is: Hello world! Hello AI committee. Welcome to the AI world.\n",
+      "{'welcome': 1, 'world': 2, 'hello': 2, 'the': 1, 'to': 1, 'ai': 2, 'committee': 1}\n"
      ]
     }
    ],
@@ -82,6 +83,7 @@
     "    return ''.join(x)\n",
     "\n",
     "mystr = input(\"Enter a String: \").strip()\n",
+    "print(\"String is:\",mystr)\n",
     "mystr = mystr.lower()\n",
     "mylist = mystr.split()\n",
     "unique_words = list(set(mylist))\n",
@@ -89,7 +91,6 @@
     "word_count = dict()\n",
     "for i in unique_words:\n",
     "    word_count[i]=mystr.count(i)\n",
-    "\n",
     "print(word_count)"
    ]
   },
@@ -119,12 +120,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The R2 Score is 0.8453474216648793\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.linear_model import LinearRegression as lr\n",
-    "import numpy as np\n"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
+    "data = {\n",
+    "    'SIZES': [1400, 1600, 1700, 1875, 1100, 1550, 2350, 2450, 1425, 1700],\n",
+    "    'PRICE': [245000, 312000, 279000, 308000, 199000, 219000, 405000, 324000, 319000, 255000]\n",
+    "}\n",
+    "lr=LinearRegression()\n",
+    "df = pd.DataFrame(data)\n",
+    "x=df[[\"SIZES\"]]\n",
+    "y=df[\"PRICE\"]\n",
+    "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=40)\n",
+    "lr.fit(x_train,y_train)\n",
+    "y_pred=lr.predict(x_test)\n",
+    "r2=r2_score(y_test,y_pred)\n",
+    "print(f\"The R2 Score is {r2}\")"
    ]
   }
  ],
