--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -11,15 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2 3 4 5 6 7 8 9 10 \n",
-      "Sum of even Numbers: 30\n"
+      "1 2 3 4 5 \n",
+      "Sum of even Numbers: 6\n"
      ]
     }
    ],
@@ -60,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String is: Hello world! Hello AI committee. Welcome to the AI world.\n",
-      "{'welcome': 1, 'world': 2, 'hello': 2, 'the': 1, 'to': 1, 'ai': 2, 'committee': 1}\n"
+      "String is: Hello world\n",
+      "{'world': 1, 'hello': 1}\n"
      ]
     }
    ],
@@ -120,14 +120,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The R2 Score is 0.8453474216648793\n"
+      "The R2 Score is 0.8453474216648793\n",
+      "Prediction is [229143.00376326 304819.91105029]\n",
+      "Name: LinearRegression\n",
+      "Type: <class 'abc.ABCMeta'>\n",
+      "Value: <class 'sklearn.linear_model._base.LinearRegression'>\n",
+      "\n",
+      "Name: data\n",
+      "Type: <class 'dict'>\n",
+      "Value: {'SIZES': [1400, 1600, 1700, 1875, 1100, 1550, 2350, 2450, 1425, 1700], 'PRICE': [245000, 312000, 279000, 308000, 199000, 219000, 405000, 324000, 319000, 255000]}\n",
+      "\n",
+      "Name: df\n",
+      "Type: <class 'pandas.core.frame.DataFrame'>\n",
+      "Value:    SIZES   PRICE\n",
+      "0   1400  245000\n",
+      "1   1600  312000\n",
+      "2   1700  279000\n",
+      "3   1875  308000\n",
+      "4   1100  199000\n",
+      "5   1550  219000\n",
+      "6   2350  405000\n",
+      "7   2450  324000\n",
+      "8   1425  319000\n",
+      "9   1700  255000\n",
+      "\n",
+      "Name: lr\n",
+      "Type: <class 'sklearn.linear_model._base.LinearRegression'>\n",
+      "Value: LinearRegression()\n",
+      "\n",
+      "Name: r2\n",
+      "Type: <class 'float'>\n",
+      "Value: 0.8453474216648793\n",
+      "\n",
+      "Name: x\n",
+      "Type: <class 'pandas.core.frame.DataFrame'>\n",
+      "Value:    SIZES\n",
+      "0   1400\n",
+      "1   1600\n",
+      "2   1700\n",
+      "3   1875\n",
+      "4   1100\n",
+      "5   1550\n",
+      "6   2350\n",
+      "7   2450\n",
+      "8   1425\n",
+      "9   1700\n",
+      "\n",
+      "Name: x_test\n",
+      "Type: <class 'pandas.core.frame.DataFrame'>\n",
+      "Value:    SIZES\n",
+      "4   1100\n",
+      "3   1875\n",
+      "\n",
+      "Name: x_train\n",
+      "Type: <class 'pandas.core.frame.DataFrame'>\n",
+      "Value:    SIZES\n",
+      "8   1425\n",
+      "1   1600\n",
+      "2   1700\n",
+      "9   1700\n",
+      "0   1400\n",
+      "5   1550\n",
+      "7   2450\n",
+      "6   2350\n",
+      "\n",
+      "Name: y\n",
+      "Type: <class 'pandas.core.series.Series'>\n",
+      "Value: 0    245000\n",
+      "1    312000\n",
+      "2    279000\n",
+      "3    308000\n",
+      "4    199000\n",
+      "5    219000\n",
+      "6    405000\n",
+      "7    324000\n",
+      "8    319000\n",
+      "9    255000\n",
+      "Name: PRICE, dtype: int64\n",
+      "\n",
+      "Name: y_pred\n",
+      "Type: <class 'numpy.ndarray'>\n",
+      "Value: [229143.00376326 304819.91105029]\n",
+      "\n",
+      "Name: y_test\n",
+      "Type: <class 'pandas.core.series.Series'>\n",
+      "Value: 4    199000\n",
+      "3    308000\n",
+      "Name: PRICE, dtype: int64\n",
+      "\n",
+      "Name: y_train\n",
+      "Type: <class 'pandas.core.series.Series'>\n",
+      "Value: 8    319000\n",
+      "1    312000\n",
+      "2    279000\n",
+      "9    255000\n",
+      "0    245000\n",
+      "5    219000\n",
+      "7    324000\n",
+      "6    405000\n",
+      "Name: PRICE, dtype: int64\n",
+      "\n"
      ]
     }
    ],
@@ -150,8 +249,34 @@
     "lr.fit(x_train,y_train)\n",
     "y_pred=lr.predict(x_test)\n",
     "r2=r2_score(y_test,y_pred)\n",
-    "print(f\"The R2 Score is {r2}\")"
+    "print(f\"The R2 Score is {r2}\")\n",
+    "print(f\"Prediction is {y_pred}\")\n",
+    "# Print all variables with labeled string\n",
+    "variables = {\n",
+    "    'LinearRegression': LinearRegression,\n",
+    "    'data': data,\n",
+    "    'df': df,\n",
+    "    'lr': lr,\n",
+    "    'r2': r2,\n",
+    "    'x': x,\n",
+    "    'x_test': x_test,\n",
+    "    'x_train': x_train,\n",
+    "    'y': y,\n",
+    "    'y_pred': y_pred,\n",
+    "    'y_test': y_test,\n",
+    "    'y_train': y_train\n",
+    "}\n",
+    "\n",
+    "for name, value in variables.items():\n",
+    "    print(f\"Name: {name}\\nType: {type(value)}\\nValue: {value}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -170,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
